# ba-assistant

./: .env  .gitignore  README.md  app.py  pyproject.toml
.windsurf/rules/: coding-convention.md  directory-structure.md  mcp-use.md  run-app.md
agents/builder/: agent_workflow_builder.py
agents/prompts/: ba_assistant_prompt.md
agents/tools/: ba_agents.py
database/: graphiti_client.py  redis_manager.py
knowledge_graph/: __init__.py  graphITI_manager.py  knowledge_graph_factory.py
knowledge_graph/business/: __init__.py  ba_knowledge_interface.py  ba_knowledge_service.py
knowledge_graph/core/: __init__.py  graphiti_core_interface.py  graphiti_core_service.py
knowledge_graph/processing/: __init__.py  content_processor_service.py
knowledge_graph/processing/converters/: __init__.py  document_converter.py
knowledge_graph/processing/interfaces/: __init__.py  content_processor_interface.py
knowledge_graph/processing/parsers/: __init__.py  markdown_section_parser.py
knowledge_graph/processing/services/: __init__.py  content_processor_service.py
ui/: chainlit_handlers.py  chainlit_orchestrator.py  constants.py
ui/handlers/: __init__.py  agent_handler.py  base_handler.py  chat_lifecycle_handler.py  command_handler.py  file_handler.py  message_handler.py  response_formatter.py
utils/: file_receiver.py  kg_operations.py  markdown_section_parser.py  prompt_loading.py
